# tuneforge

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  AUDIT_TUNEFORGE_ZEROTH.md  CHANGELOG-DE.md  CHANGELOG.md  COMPLIANCE_STATEMENT-DE.md  COMPLIANCE_STATEMENT.md  CONTRIBUTING-DE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.finetune  Dockerfile.turboquant  ENTERPRISE_MASTER_PLAN.md  ENTERPRISE_ROADMAP_SUMMARY.md  ENTERPRISE_TEST_EVAL_PLAN.md  FORK.md  LICENSE  PLAN_v1.0.0_RELEASE.md  QUALITY_FIRST_ROADMAP.md  README-DE.md  README.md  RELEASE_CHECKLIST.md  REPO_INDEX-DE.md  REPO_INDEX.md  SECURITY-DE.md  SECURITY.md  SUPPORT-DE.md  SUPPORT.md  TASK_BREAKDOWN_1.x.md  THIRD_PARTY.md  agent_config.py  agent_loop.py  audit_run.py  coverage.json  docker-compose.finetune.yml  docker-compose.turboquant.yml  docker-compose.yml  (+8 more)
.claude/: settings.json
.mcp-debug-tools/: config.json
audit/: RELEASE_AUDIT_v1.0.0.md  protocol.schema.json  siem-export.schema.json
configs/: README.md  tier-a-validation.yaml  tier1-8gb.json  tier1-large.json  tier1-medium.json  tier2-12gb.json  tier3-24gb.json  tier3-deep.json  tier3-highlr.json  tier3-tinystories-baseline.json
content/: blog-de.md  blog-en.md
dashboard/: visualize.py
data_utils/: __init__.py  compiler_feedback.py  data_formats.py  legal_data.py  synthetic_generator.py
datasets/: data_formats.py  legal_data.py  synthetic_generator.py
docs/: API-REFERENCE.md  ARCHITECTURE-DE.md  ARCHITECTURE-EN.md  ARCHITECTURE.md  BUSINESS_ROI.md  CHANGELOG.md  COMPLIANCE_PACK-DE.md  COMPLIANCE_PACK-EN.md  COMPLIANCE_PACK.md  CREDITS.md  EVAL-RESULTS.md  GPU-TIERS.md  GPU_TIERS-DE.md  GPU_TIERS-EN.md  HARDWARE_EVAL_RUNBOOK.md  LEARNINGS_SESSION_2026-04-10.md  LEGAL_SOURCE_REFERENCES-DE.md  LEGAL_SOURCE_REFERENCES-EN.md  LOGGING_AUDIT_PROTOCOL-DE.md  LOGGING_AUDIT_PROTOCOL-EN.md  MODEL_DOCUMENTATION_SOP-DE.md  MODEL_DOCUMENTATION_SOP-EN.md  MODEL_RELEASE_POLICY-DE.md  MODEL_RELEASE_POLICY-EN.md  MODEL_RELEASE_POLICY.md  OPEN_NOTEBOOK_PIPELINE.md  PATCH_PLAN-DE.md  PATCH_PLAN-EN.md  REFERENCES.md  RELEASE_POLICY-DE.md  RELEASE_POLICY-EN.md  RELEASE_POLICY.md  SERAPH_AEGIS_MASTER_DOCS.md  SETUP-DE.md  SETUP-EN.md  TRAINING_SOP-DE.md  TRAINING_SOP-EN.md  TROUBLESHOOTING-DE.md  TROUBLESHOOTING-EN.md  TROUBLESHOOTING.md  (+9 more)
eval/: gradient_surgery_verifier.py  red_team_harness.py
finetune/: model_publisher.py  operability.py  robustness_evaluator.py  safe_trainer.py  trainer.py  zeroth_client.py  zeroth_core.py
patches/: prepare_consumer.py  train_consumer.py
programs/: program-architecture.md  program-conservative.md  program-default.md  program-hyperparams.md  program-legal-finetune.md  program-sps-finetune.md
scripts/: check_attribution.py  check_compliance_docs.py  check_docs_links.py  check_docs_parity.py  check_public_claims.py  check_repo_hygiene.py  check_template_completeness.py  collect_validation_evidence.py  generate_modelfile.py  pre_release_check.py  publish_to_hub.py  render_content_bundle.py  run_3090_baseline.sh  run_remote_3090_pilot.py  turboquant_manager.py  update_validation_registry.py  validate_audit_pack.py  validate_for_publish.py  validate_release_artifacts.py  validate_validation_registry.py  (+1 more)
(+111 files in other folders)
