[project]
name = "tuneforge"
version = "0.2.0"
description = "TuneForge: benchmark-first self-finetune framework and Docker product surface built on karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.6.0",
]

[project.optional-dependencies]
hopper = [
    "kernels>=0.11.7",
]
llm = [
    "anthropic>=0.49.0",
    "openai>=1.68.0",
]
finetune = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "peft>=0.10.0",
    "protobuf",
    "safetensors>=0.4.0",
    "sentencepiece",
    "transformers>=4.51.0",
    "trl>=0.8.0",
    "unsloth>=2026.2.0",
]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://www.ai-engineering.at"
Repository = "https://github.com/AI-Engineerings-at/Playbook01"
Documentation = "https://github.com/AI-Engineerings-at/Playbook01/tree/main/products/tuneforge"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
