[project]
name = "tuneforge"
version = "1.0.0"
description = "TuneForge: benchmark-first self-finetune framework and Docker product surface built on karpathy/autoresearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "torch>=2.6.0",
]

[project.optional-dependencies]
hopper = [
    "kernels>=0.11.7",
]
llm = [
    "anthropic>=0.49.0",
    "openai>=1.68.0",
]
finetune = [
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "peft>=0.10.0",
    "protobuf",
    "safetensors>=0.4.0",
    "sentencepiece",
    "transformers>=4.51.0",
    "trl>=0.8.0",
    "unsloth>=2026.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "bandit>=1.7.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://www.ai-engineering.at"
Repository = "https://github.com/ai-engineerings/tuneforge"
Documentation = "https://ai-engineerings.github.io/tuneforge/"
Issues = "https://github.com/ai-engineerings/tuneforge/issues"
Changelog = "https://github.com/ai-engineerings/tuneforge/blob/main/CHANGELOG.md"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
exclude = ["upstream/", "archive/", ".git/", "patches/"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E402", "E501", "W291", "W293"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["F841"]  # Allow unused variables in tests
"audit_run.py" = ["F841", "I001"]
